Change seds back to the previous format